Separate task and solution
