# backend/internal/app/task/controller/http/v1/controller_teacher.go
@@ -146,68 +146,6 @@ func (c *TaskControllerTeacher) UpdateTask(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(taskObj)
 }
 
-// @summary		Обновление решения. [Только преподаватель]
-// @description	Частичное обновление решения (только переданные поля: статус - "готово"/"проверено" - и оценка) по его id.
-// @router			/teacher/solution/{id} [patch]
-// @id				teacher-solution-update
-// @tags			task
-// @accept			json
-// @produce		json
-// @security		JWTAccess
-// @param			id					path		string				true	"ID решения"
-// @param			updateSolutionBody	body		updateSolutionBody	true	"updateSolutionBody"
-// @success		200					{object}	entity.Solution
-// @failure		400					"неверный статус"
-// @failure		401					"неверный токен (пустой, истекший или неверный формат)"
-// @failure		403					"доступ запрещён"
-// @failure		404					"решение не найдено"
-func (c *TaskControllerTeacher) UpdateSolution(ctx *fiber.Ctx) error {
-	// parse user claims
-	userClaims := utilsjwt.ParseUserClaimsFromRequest(ctx)
-
-	inputPath := &solutionIDPath{}
-	if err := serialize.Deserialize(inputPath, ctx.ParamsParser, c.valid.Validate); err != nil {
-		return err
-	}
-	inputBody := &updateSolutionBody{}
-	if err := serialize.Deserialize(inputBody, ctx.BodyParser, c.valid.Validate); err != nil {
-		return err
-	}
-
-	// data reshaping
-	newData := &entity.SolutionUpdate{
-		StatusID: inputBody.StatusID,
-		Grade:    inputBody.Grade,
-	}
-
-	solObj, err := c.taskUCTeacher.UpdateSolution(userClaims.ID, inputPath.ID, newData)
-	if errors.Is(err, task.ErrInvalidData) {
-		return &httperror.HTTPError{
-			CauseErr:   err,
-			StatusCode: fiber.StatusBadRequest,
-			Message:    "неверный статус",
-		}
-	}
-	if errors.Is(err, task.ErrForbidden) {
-		return &httperror.HTTPError{
-			CauseErr:   err,
-			StatusCode: fiber.StatusForbidden,
-			Message:    "доступ запрещён",
-		}
-	}
-	if errors.Is(err, task.ErrNotFound) {
-		return &httperror.HTTPError{
-			CauseErr:   err,
-			StatusCode: fiber.StatusNotFound,
-			Message:    "решение не найдено",
-		}
-	}
-	if err != nil {
-		return err
-	}
-	return ctx.Status(fiber.StatusOK).JSON(solObj)
-}
-
 // @summary		Удаление задания по id. [Только преподаватель]
 // @description	Удаление задания целиком (со всеми его решениями) по его id.
 // @router			/task/{id} [delete]
@@ -242,40 +180,6 @@ func (c *TaskControllerTeacher) DeleteTask(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusNoContent).JSON(nil)
 }
 
-// @summary		Удаление решения по id. [Только преподаватель]
-// @description	Удаление решения (не задания целиком) по его id.
-// @router			/solution/{id} [delete]
-// @id				solution-delete
-// @tags			task
-// @accept			json
-// @produce		json
-// @security		JWTAccess
-// @param			id	path	string	true	"ID решения"
-// @success		204	"No Content"
-// @failure		401	"неверный токен (пустой, истекший или неверный формат)"
-// @failure		403	"доступ запрещён"
-func (c *TaskControllerTeacher) DeleteSolution(ctx *fiber.Ctx) error {
-	// parse user claims
-	userClaims := utilsjwt.ParseUserClaimsFromRequest(ctx)
-
-	inputPath := &solutionIDPath{}
-	if err := serialize.Deserialize(inputPath, ctx.ParamsParser, c.valid.Validate); err != nil {
-		return err
-	}
-	err := c.taskUCTeacher.DeleteSolutionByID(userClaims.ID, inputPath.ID)
-	if errors.Is(err, task.ErrForbidden) {
-		return &httperror.HTTPError{
-			CauseErr:   err,
-			StatusCode: fiber.StatusForbidden,
-			Message:    "доступ запрещён",
-		}
-	}
-	if err != nil {
-		return fmt.Errorf("delete solution: %w", err)
-	}
-	return ctx.Status(fiber.StatusNoContent).JSON(nil)
-}
-
 // @summary		Получение списка заданий [только преподаватель].
 // @description	Получение списка заданий конкретного преподавателя.
 // @router			/task [get]
@@ -305,41 +209,6 @@ func (c *TaskControllerTeacher) TaskList(ctx *fiber.Ctx) error {
 	}
 	output := &listTaskOut{
 		Data:       taskListResp,
-		Pagination: pageParams,
-	}
-	return ctx.Status(fiber.StatusOK).JSON(output)
-}
-
-// @summary		Получение списка решений [только преподаватель].
-// @description	Получение списка решений для заданий конкретного преподавателя.
-// @router			/teacher/solution [get]
-// @id				teacher-solution-list
-// @tags			task
-// @accept			json
-// @produce		json
-// @security		JWTAccess
-// @param			listSolutionTeacherQuery	query		listSolutionTeacherQuery	false	"listSolutionTeacherQuery"
-// @success		200							{object}	listSolutionOut
-// @failure		401							"неверный токен (пустой, истекший или неверный формат)"
-func (c *TaskControllerTeacher) SolutionList(ctx *fiber.Ctx) error {
-	// parse user claims
-	userClaims := utilsjwt.ParseUserClaimsFromRequest(ctx)
-
-	inputQuery := &listSolutionTeacherQuery{}
-	if err := serialize.Deserialize(inputQuery, ctx.QueryParser, c.valid.Validate); err != nil {
-		return err
-	}
-	// get pagination object OR nil
-	pageParams := inputQuery.PaginationQuery.ToPagination()
-
-	// get solutions
-	solListResp, err := c.taskUCTeacher.GetSolutions(userClaims.ID, inputQuery.Search,
-		inputQuery.Archived, pageParams)
-	if err != nil {
-		return fmt.Errorf("list: %w", err)
-	}
-	output := &listSolutionOut{
-		Data:       solListResp,
 		Pagination: pageParams,
 	}
 	return ctx.Status(fiber.StatusOK).JSON(output)
