# backend/internal/app/task/controller/http/v1/data_input.go
@@ -22,12 +22,6 @@ type taskIDPath struct {
 	ID int `params:"id" validate:"required" example:"2"`
 }
 
-// @description solutionIDPath represents a data with solution ID in path params.
-type solutionIDPath struct {
-	// solution id
-	ID int `params:"id" validate:"required" example:"2"`
-}
-
 // @description updateTaskBody represents a data with optional body to update task.
 type updateTaskBody struct {
 	// new task title
@@ -36,40 +30,10 @@ type updateTaskBody struct {
 	Desc *string `json:"description,omitempty" validate:"omitempty" example:"Что такое ООП? Перечислить принципы ООП"`
 }
 
-// @description updateSolutionBody represents a data with optional body to update solution.
-type updateSolutionBody struct {
-	// new status ID
-	StatusID *int `json:"status_id,omitempty" validate:"omitempty" example:"2"`
-	// new grade
-	Grade *string `json:"grade,omitempty" validate:"omitempty,max=5" example:"5+" maxLength:"50"`
-	// new answer
-	Answer *string `json:"answer,omitempty" validate:"omitempty" example:"ООП - это объектно-ориентированное программирование"`
-}
-
 // @description listTaskQuery represents a data with optional query-params to get tasks list.
 type listTaskQuery struct {
 	// substring to filter data by substring (case-insensitive)
 	Search string `query:"search,omitempty" json:"search" example:"F26"`
-	// pagination params
-	entity.PaginationQuery
-}
-
-// @description listSolutionTeacherQuery represents a data with
-// optional query-params to get solutions list for a teacher tasks.
-type listSolutionTeacherQuery struct {
-	// filter for checked solutions if true
-	Archived bool `query:"archived,omitempty" json:"archived" example:"true"`
-	// substring to filter data by substring (case-insensitive)
-	Search string `query:"search,omitempty" json:"search" example:"F26"`
-	// pagination params
-	entity.PaginationQuery
-}
-
-// @description listSolutionStudentQuery represents a data with
-// optional query-params to get solutions list for a student.
-type listSolutionStudentQuery struct {
-	// filter for checked solutions if true
-	Archived bool `query:"archived,omitempty" json:"archived" example:"true"`
 	// pagination params
 	entity.PaginationQuery
 }
